glx/testdata/valid/assertion-with-participant.glx
# Test file for participant-based assertions
# Demonstrates the new participant assertion feature

persons:
  person-john:
    properties:
      primary_name: "John Smith"
      gender: "male"
  
  person-jane:
    properties:
      primary_name: "Jane Doe"
      gender: "female"
  
  person-thomas:
    properties:
      primary_name: "Thomas Brown"
      gender: "male"

events:
  event-marriage-1880:
    type: marriage
    date:
      value: "1880-06-15"

sources:
  source-marriage-cert:
    title: "Marriage Certificate"
    type: vital_record

citations:
  citation-marriage-cert:
    source: source-marriage-cert
    quality: 3
    transcription: "John Smith married Jane Doe on June 15, 1880"

# Participant assertions showing people involved in the marriage
assertions:
  assertion-john-groom:
    subject: event-marriage-1880
    participant:
      person: person-john
      role: groom
    citations:
      - citation-marriage-cert
    confidence: high
  
  assertion-jane-bride:
    subject: event-marriage-1880
    participant:
      person: person-jane
      role: bride
    citations:
      - citation-marriage-cert
    confidence: high
  
  assertion-thomas-witness:
    subject: event-marriage-1880
    participant:
      person: person-thomas
      role: witness
      notes: "Witnessed the marriage ceremony"
    citations:
      - citation-marriage-cert
    confidence: high

